<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:padding="@dimen/padding_content"
        android:text="@string/test_link"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnCancel"
            style="@style/TextButtonDialogFragment"
            android:text="@string/cancel"
            android:textColor="?colorAccent" />

        <TextView
            android:id="@+id/btnGo"
            style="@style/TextButtonDialogFragment"
            android:layout_margin="20dp"
            android:text="@string/go" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>